update metrice api